# adventofcode

./: Makefile  aoc.cabal  aoc.tix  run.sh  stan.html
docs/: reports
hs/app/: Main.hs
hs/src/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
input/: input13
