cabal-version:         2.4

name:                  aoc
version:               0.0.1.0

synopsis:              AoC
description:           Please see the README on GitHub at <https://github.com/kamil-adam/adventofcode#readme>
homepage:              https://github.com/kamil-adam/adventofcode/
bug-reports:           https://github.com/kamil-adam/adventofcode/issues

license:               Apache-2.0
--license-file:          docs/LICENSE-APACHE
author:                Kamil Adam
maintainer:            kamil.adam.zabinski@gmail.com
copyright:             2020-2021 WriteOnly Developers

category:              Language
build-type:            Simple
extra-source-files:
--  docs/CHANGELOG.md
  docs/README.md

tested-with:           GHC == 9.0.1

source-repository head
  type:                git
  location:            https://github.com/kamil-adam/aoc

flag ghcoptions
    description: compile with options
    manual     : True
    default    : False

common common-options
  build-depends:
      base                 <  4.16
    , relude               == 1.0.0.1
  mixins:
      base hiding (Prelude)
    , relude (Relude as Prelude, Relude.Extra, Data.Text, Relude.Unsafe)
  default-language:    Haskell2010
  default-extensions:
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
--    NoImplicitPrelude
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeSynonymInstances
    ViewPatterns
--    CPP
--    TemplateHaskell
--    ForeignFunctionInterface
--    MagicHash
--    UnliftedFFITypes
    TypeOperators
--    UnboxedTuples
--    PackageImports
--    QuasiQuotes
--    DeriveAnyClass
--    DeriveLift
--    StaticPointers
    DerivingStrategies
    ConstraintKinds
    StrictData
  if flag(ghcoptions)
    ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wredundant-constraints
      -Wnoncanonical-monad-instances
      -fhide-source-paths
--    -Wmissing-export-lists FIXME
      -Wpartial-fields
      -Wmissing-deriving-strategies
      -fwrite-ide-info
      -hiedir=.hie
--      -Wunused-packages
      -fprint-potential-instances
      -Werror

library
  import:              common-options
  hs-source-dirs:      hs/src
  exposed-modules:
--    Day1
--    Day2
--    Day3
--    Day4
--    Day5
--    Day6
--    Day7
    Day8
  build-depends:
      split
    , text
    , containers           == 0.6.2.1
--    , data-default
--    , dlist
--    , ilist
--    , ListLike
--    , mono-traversable
--    , mtl
--    , pretty-simple
--    , slist
--    , type-operators
  ghc-options:

executable aoc
  import:              common-options
  hs-source-dirs:      hs/app
  main-is:             Main.hs
  other-modules:
  build-depends:
      aoc
--    , optparse-applicative >= 0.14.3.0
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

--test-suite aoc-test
--  import:              common-options
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      hs/test
--  main-is:             Main.hs
--  other-modules:
--    Spec
--
--  build-depends:
--      hspec
--    , hspec-core
--    , hspec-expectations-pretty-diff
--    , hspec-golden
--    , hspec-slow
--
--    , aoc
--
--    , filepath
----    , ilist
--    , type-operators
--
--  build-tool-depends:  hspec-discover:hspec-discover == 2.*
--  ghc-options:
--    -threaded
--    -rtsopts
--    -with-rtsopts=-N
--
--benchmark aoc-benchmark
--  import:              common-options
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      hs/benchmark
--  main-is:             Main.hs
--  build-depends:
--      gauge
--
----    , aoc
--
--  ghc-options:
--    -threaded
--    -rtsopts
--    -with-rtsopts=-N
